            - an grouped list of changes after topic in an logical order with all not noticeable changes removed
        both can be followed by an table of issues starting with "fixed issues:" followed by an list of grouped after
        first obscures of the bug the list of issues with an short description and when based on an github bug report
        its id.


changelog of snapshot [next]



changelog of snapshot 20w31a (theme: improvements)
    - MDK has now an function to change the target version
    - DataGenerator system allows now to add new data generators during data-gen-ing
    - MDK can access now versions from an launcher instance
    - MDK is now capable of building the mod into one final zipfile
    - added data generators for more stuff
    - improved crafting system
    - added FallingBlockEntity
    - IFallingBlock is now based around an entity instead of an simple block
    - added data generator for language files and loot tables
    - changed how the game is launching to an more modify-able way
    - changed a lot of events
    - block states can now have parents and alias model names

    fixed issues:
        - IHorizontalOrientableBlock was behaving incorrectly

        from previous release:
            - ItemAtlas was baking some item images in some cases not correctly
            - CombinedSlabFactory was not generating block states correctly

        long term issues:
            - Entity.tick() was never called
            - command entry for blocks was not accepting air


changelog of a1.0.0: (excluding the changes from the snapshots below)
    Rendering:
        - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory
        - improved entity model rendering code

    Modding:
        - added possibility to register an event name for execution on mod bus on reload
        - improved reload system
        - added api management system
        - added MDK system

    Gameplay: