@@ -225,3 +225,4 @@ issue 239: an second player is spawned in world when entering an world; fixed on
 issue 240: Entity's tick() function was not called; fixed on 20.07.2020 by uuk
 issue 241: block command entry was not accepting minecraft:air as an block; fixed on 20.07.2020 by uuk
 issue 242: CombinedSlabFactory was not generating block state correctly; fixed on 28.07.2020 by uuk
+issue 243: InventoryHandler was miss-behaving in some cases; fixed on 30.07.2020 by uuk
